# Stplpy

./: .gitignore  CONTRIBUTING.md  README.md  example.py  pyproject.toml
stplpy/: __init__.py  exceptions.py  logger.py  timeline.py  user.py  utils.py
tests/: __init__.py  conftest.py  test_exceptions.py  test_timeline.py  test_user.py
